changes in index.html

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -144,9 +144,7 @@
         <!-- call to action -->
         <div class="cta text-center">
             <h2 class="mt-0 mb-4">I'm Saiydur Rahman</h2>
-            <p class="mt-0 mb-4">I'm a Full Stack Web Developer, Currently Work With An IT Farm As A Junior Web Developer.In Off Time I Love To Play 
-                Video Games And Write Blog.
-            </p>
+            <p class="mt-0 mb-4">Web Developer, Gamer, Blogger</p>
             <a href="#" class="btn btn-light mt-2">About Me</a>
         </div>
     </div>
